<resources>
    <string name="app_name">音乐播放器</string>
    <string name="local_music">本地音乐</string>
    <string name="search">搜索</string>
    <string name="hot_list">热门榜</string>
    <string name="play_list">播放列表</string>
    <string name="exit">退出</string>
    <string name="empty">这里空空如也</string>
    <string name="load_error">加载错误，请重试</string>
    <string name="network_error">网络异常</string>
    <string name="json_decode_exception">服务器返回无法解析的数据，请稍后再试</string>
    <string name="internet_traffic_save">省流</string>
    <string name="low_quality">低品音质</string>
    <string name="standard_quality">标准音质</string>
    <string name="vertical_ellipsis" translatable="false">⋮</string>
    <string name="setting">设置</string>
    <string name="operate_failure">操作失败，请重试</string>
    <string name="permission_denied_exception">抱歉，由于没有必要的权限，我们无法为您播放音乐</string>
    <string name="click_to_load_more">点击加载下一页</string>
    <string name="loading_more">正在加载更多</string>
    <string name="no_more">没有更多</string>
    <string name="no_play_list">无播放列表，快到乐库里挑选歌曲吧！</string>
    <string name="load_error_listen_other">加载错误，听听其他歌曲先吧</string>
    <string name="playing">正在播放</string>
    <string name="downloading">正在下载</string>
    <string name="network">网络</string>
    <string name="local">本地</string>
    <string name="in_stream_null">无效的下载链接</string>
    <string name="file_system_error">文件系统错误</string>
    <string name="download_complete">下载完成</string>
    <string name="download_failure">下载失败</string>
    <string name="unknow_exception">未知异常</string>
    <string name="select_operate">选择操作</string>
    <string name="what_you_want_to_do">你要干什么？</string>
</resources>
