<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_local_music"
            android:icon="@drawable/ic_queue_music_black_24dp"
            android:title="@string/play_list"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_current_play"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/playing"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_hot"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/hot_list"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit"
            android:checkable="false"/>


    </group>

</menu>